--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,66 @@ h1 {
 .modalDashedArea{
   @apply bg-[#F4F4FF] w-full gap-4 border border-dashed flex justify-center text-center flex-col mx-auto rounded-[5px] my-5 items-center border-[#7075FF] py-4
 }
+
+/* dropzone css */
+/* Add this CSS to your stylesheet */
+
+.dropzone {
+  border: 2px dashed #ccc;
+  padding: 20px;
+  transition: border-color 0.3s ease;
+}
+
+.dropzone.dragging {
+  border-color: #7075FF;
+}
+
+.dropzone-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.filePreviewWrapper {
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.filePreview {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  position: relative;
+}
+
+.filePreview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.removeButton {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: whitesmoke;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  padding: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.removeButton:hover {
+  background-color: #f8f8f8;
+  color: red;
+}
